Fixed ReviewService.js , Reviews.js and imroved openapi.yaml
