# controllers/Reviews.js
@@ -33,8 +33,8 @@ module.exports.evaluateReview = function evaluateReview (req, res, next, body, l
     });
 };
 
-module.exports.getReviesById = function getReviesById (req, res, next, landmarkId, reviewId) {
-  Reviews.getReviesById(landmarkId, reviewId)
+module.exports.getReviewsById = function getReviewsById (req, res, next, landmarkId, reviewId) {
+  Reviews.getReviewsById(landmarkId, reviewId)
     .then(function (response) {
       utils.writeJson(res, response);
     })
