# service/ReviewsService.js
@@ -53,29 +53,17 @@ exports.evaluateReview = function(body,landmarkId,reviewId) {
  *
  * landmarkId Long The id that needs to be fetched. Use 348 for testing. 
  * reviewId Long The id that needs to be fetched. Use 23 for testing. 
- * returns Landmark
+ * returns a specific Review related to a specific Landmark
  **/
-exports.getReviesById = function(landmarkId,reviewId) {
+exports.getReviewsById = function(landmarkId,reviewId) {
   return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = {
-  "reviews" : {
-    "date" : "15th of November 2023",
-    "review_id" : 2,
-    "numOfStars" : 2,
-    "comments" : "I agree with this review...",
-    "review_text" : "This landmark worths visiting..."
-  },
-  "name" : "The White Tower",
-  "details" : "Located near the city center, the White Tower is...",
-  "location" : [ "40.753°N", "40.753°N" ],
-  "id" : 124,
-  "photos" : {
-    "date" : "10th of August 2017",
-    "image" : [ 255, 255 ],
-    "name" : "Top view of the Tower.",
-    "id" : 16422
-  }
+  "date" : "15th of November 2023",
+  "review_id" : 2,
+  "numOfStars" : 2,
+  "comments" : "I agree with this review...",
+  "review_text" : "This landmark worths visiting..."
 };
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
@@ -91,30 +79,34 @@ exports.getReviesById = function(landmarkId,reviewId) {
  * FR3: View review 
  *
  * landmarkId Long The id that needs to be fetched. Use 348 for testing. 
- * returns Landmark
+ * returns Array of Reviews for a specific Landmark
  **/
 exports.getReviewsForLandmark = function(landmarkId) {
   return new Promise(function(resolve, reject) {
     var examples = {};
-    examples['application/json'] = {
-  "reviews" : {
-    "date" : "15th of November 2023",
-    "review_id" : 2,
-    "numOfStars" : 2,
-    "comments" : "I agree with this review...",
-    "review_text" : "This landmark worths visiting..."
-  },
-  "name" : "The White Tower",
-  "details" : "Located near the city center, the White Tower is...",
-  "location" : [ "40.753°N", "40.753°N" ],
-  "id" : 124,
-  "photos" : {
-    "date" : "10th of August 2017",
-    "image" : [ 255, 255 ],
-    "name" : "Top view of the Tower.",
-    "id" : 16422
-  }
-};
+    examples['application/json'] = [
+      {
+        "review_id": 2,
+        "review_text": "This landmark worths visiting...",
+        "numOfStars": 2,
+        "comments": ["I agree with this review..."],
+        "date": "15th of November 2023"
+      },
+      {
+        "review_id": 3,
+        "review_text": "An unforgettable experience!",
+        "numOfStars": 5,
+        "comments": ["The atmosphere was incredible.", "A must-visit landmark."],
+        "date": "20th of November 2023"
+      },
+      {
+        "review_id": 4,
+        "review_text": "Not as expected, a bit underwhelming.",
+        "numOfStars": 3,
+        "comments": ["Could have been better organized.", "Was not as advertised."],
+        "date": "10th of November 2023"
+      }
+    ];
     if (Object.keys(examples).length > 0) {
       resolve(examples[Object.keys(examples)[0]]);
     } else {
